--- a/viewer.html
+++ b/viewer.html
@@ -3,134 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Watch Live • Wonderland</title>
+  <title>Viewer • Wonderland</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    body {
-      background: #f9f9f9;
-      color: #222;
-      padding-bottom: 0;
-    }
-    header {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding: 16px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-      position: sticky;
-      top: 0;
-      background: white;
-      z-index: 100;
-    }
-    .back {
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      color: #e50914;
-      font-weight: 600;
-    }
-    .title {
-      flex: 1;
-      text-align: center;
-      font-weight: 700;
-      font-size: 18px;
-      color: #e50914;
-    }
-    .main {
-      padding: 18px;
-    }
-
-    #remote-player {
-      width: 100%;
-      height: 500px;
-      background: #000;
-      border-radius: 16px;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-size: 18px;
-      text-align: center;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    .meta {
-      margin-top: 16px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .host-name {
-      font-weight: 600;
-      color: #e50914;
-    }
-
-    .timer {
-      font-family: monospace;
-      background: #111;
-      color: #fff;
-      padding: 4px 12px;
-      border-radius: 8px;
-      font-weight: 700;
-      font-size: 16px;
-    }
-
-    .offline-message {
-      color: #ff4d4d;
-      font-size: 20px;
-      line-height: 1.4;
-    }
-
-    .last-live {
-      margin-top: 16px;
-      text-align: center;
-      color: #555;
-      font-size: 14px;
-      background: #f0f0f0;
-      padding: 10px;
-      border-radius: 10px;
-    }
+    * { box-sizing: border-box; margin:0; padding:0; font-family:'Segoe UI', sans-serif; }
+    body { background:#fff; color:#111; display:flex; flex-direction:column; min-height:100vh; }
+    header { display:flex; align-items:center; justify-content:space-between; padding:14px 16px; background:#fff; box-shadow:0 2px 6px rgba(0,0,0,.08); position:sticky; top:0; z-index:10; }
+    .title { font-weight:700; color:#e50914; font-size:18px; }
+    #remote-player { flex:1; display:flex; align-items:center; justify-content:center; background:#000; color:#aaa; font-weight:600; border-radius:10px; margin:16px; overflow:hidden; }
+    footer { text-align:center; padding:12px; font-size:14px; background:#f9f9f9; border-top:1px solid #eee; color:#555; }
+    .live-dot { width:10px; height:10px; border-radius:50%; background:red; display:inline-block; margin-right:6px; animation:blink 1s infinite; }
+    @keyframes blink { 0%,100%{opacity:1;} 50%{opacity:0;} }
   </style>
 </head>
 <body>
   <header>
-    <div class="back" id="backBtn"><i class="fas fa-arrow-left"></i> Back</div>
-    <div class="title">Live Stream</div>
-    <div style="width: 64px;"></div>
+    <div class="title"><i class="fa-solid fa-video"></i> Live Viewer</div>
+    <div id="status" style="color:#777;font-weight:600;">Checking live...</div>
   </header>
 
-  <div class="main">
-    <div id="remote-player">Loading stream...</div>
+  <div id="remote-player">Waiting for host...</div>
 
-    <div class="meta">
-      <div class="host-name">Host: wonderland portal</div>
-      <div class="timer" id="liveTimer">00:00:00</div>
-    </div>
-
-    <div id="lastLiveInfo" class="last-live" style="display: none;"></div>
-  </div>
+  <footer>
+    <span class="label-small">
+      <span id="liveDot" class="live-dot" style="display:none"></span>
+      Host: <span id="hostEmail">—</span> • <span id="viewCount">0</span> watching
+    </span>
+  </footer>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import {
+      getFirestore, doc, updateDoc, onSnapshot, arrayUnion, arrayRemove
+    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    // Load Agora SDK
-    const agoraScript = document.createElement('script');
-    agoraScript.src = "https://download.agora.io/sdk/release/AgoraRTC_N.js";
-    document.head.appendChild(agoraScript);
-
+    // --- Firebase Config ---
     const firebaseConfig = {
       apiKey: "AIzaSyBbR8R_3_Xf6QQPaZf9WDRLovSycAI1bKQ",
       authDomain: "emmy-programmers.firebaseapp.com",
@@ -148,109 +57,120 @@
     const CHANNEL_NAME = "live_room";
 
     const remotePlayer = document.getElementById('remote-player');
-    const liveTimerEl = document.getElementById('liveTimer');
-    const lastLiveInfoEl = document.getElementById('lastLiveInfo');
-    const backBtn = document.getElementById('backBtn');
+    const hostEmailEl = document.getElementById('hostEmail');
+    const viewCountEl = document.getElementById('viewCount');
+    const statusEl = document.getElementById('status');
+    const liveDot = document.getElementById('liveDot');
+    const sessionDocRef = doc(db, 'live_sessions', 'live_room');
 
-    backBtn.onclick = () => window.location.href = 'dashboard.html';
-
+    let currentUser = null;
     let client = null;
 
-    function formatHMS(totalSeconds) {
-      const h = Math.floor(totalSeconds / 3600).toString().padStart(2, '0');
-      const m = Math.floor((totalSeconds % 3600) / 60).toString().padStart(2, '0');
-      const s = Math.floor(totalSeconds % 60).toString().padStart(2, '0');
-      return `${h}:${m}:${s}`;
+    // --- Load Agora SDK Dynamically ---
+    const agoraScript = document.createElement('script');
+    agoraScript.src = "https://download.agora.io/sdk/release/AgoraRTC_N-4.20.0.js";
+    agoraScript.onload = () => {
+      console.log("Agora SDK loaded successfully");
+      if (currentUser) initViewer();
+    };
+    document.head.appendChild(agoraScript);
+
+    // --- Initialize viewer logic after SDK and user are ready ---
+    function initViewer() {
+      console.log("Viewer initialized");
+      watchLiveSession();
     }
 
-    async function initAgoraViewer() {
-      if (typeof AgoraRTC === 'undefined') return;
-      try {
-        client = AgoraRTC.createClient({ mode: "rtc", codec: "vp8" });
-        client.on("user-published", async (user, mediaType) => {
-          await client.subscribe(user, mediaType);
-          if (mediaType === "video") {
-            remotePlayer.innerHTML = '';
-            const playerDiv = document.createElement("div");
-            playerDiv.id = `player-${user.uid}`;
-            playerDiv.style.width = "100%";
-            playerDiv.style.height = "100%";
-            remotePlayer.appendChild(playerDiv);
-            user.videoTrack.play(playerDiv);
-          }
-        });
-
-        client.on("user-unpublished", (user, mediaType) => {
-          if (mediaType === "video") {
-            const playerDiv = document.getElementById(`player-${user.uid}`);
-            if (playerDiv) playerDiv.remove();
-            remotePlayer.innerHTML = '<div class="offline-message">Admin went offline</div>';
-          }
-        });
-
-        await client.join(AGORA_APP_ID, CHANNEL_NAME, null, null);
-      } catch (err) {
-        console.error("Agora viewer error:", err);
-        remotePlayer.innerHTML = '<div class="offline-message">Failed to connect to stream</div>';
-      }
-    }
-
-    function cleanupAgora() {
-      if (client) {
-        client.leave();
-        client = null;
-      }
-    }
-
-    const sessionDocRef = doc(db, 'live_sessions', 'live_room');
-    onSnapshot(sessionDocRef, (docSnap) => {
-      if (!docSnap.exists()) return;
-
-      const data = docSnap.data();
-      const isActive = data.active === true;
-
-      // Clear previous timer
-      if (window.viewerTimerCleanup) {
-        window.viewerTimerCleanup();
-        window.viewerTimerCleanup = null;
+    // --- Join viewer to Agora live ---
+    async function joinViewer() {
+      if (typeof AgoraRTC === 'undefined') {
+        return Swal.fire('Error', 'Agora SDK failed to load properly.');
       }
 
-      if (isActive && data.startedAt?.seconds) {
-        // LIVE MODE
-        lastLiveInfoEl.style.display = 'none';
-        remotePlayer.innerHTML = 'Connecting to live stream...';
+      if (client) return; // already joined
 
-        const startTime = data.startedAt.toDate().getTime();
-        const timerInterval = setInterval(() => {
-          const elapsed = Math.floor((Date.now() - startTime) / 1000);
-          liveTimerEl.textContent = formatHMS(elapsed);
-        }, 1000);
-        window.viewerTimerCleanup = () => clearInterval(timerInterval);
+      client = AgoraRTC.createClient({ mode: "rtc", codec: "vp8" });
+      await client.join(AGORA_APP_ID, CHANNEL_NAME, null, null);
 
-        if (!client) initAgoraViewer();
-      } else {
-        // OFFLINE MODE
-        cleanupAgora();
-        liveTimerEl.textContent = "00:00:00";
-        remotePlayer.innerHTML = '<div class="offline-message">Ooouch 🤕🤕<br>No live classes now.<br>Come back later!</div>';
-
-        // Show last live time if available
-        if (data.lastLiveStart && data.lastLiveEnd) {
-          const start = new Date(data.lastLiveStart.toDate()).toLocaleString();
-          const end = new Date(data.lastLiveEnd.toDate()).toLocaleString();
-          lastLiveInfoEl.textContent = `Last live: ${start} – ${end}`;
-          lastLiveInfoEl.style.display = 'block';
-        } else {
-          lastLiveInfoEl.style.display = 'none';
+      client.on("user-published", async (user, mediaType) => {
+        await client.subscribe(user, mediaType);
+        if (mediaType === "video") {
+          remotePlayer.innerHTML = "";
+          const playerDiv = document.createElement("div");
+          playerDiv.style.width = "100%";
+          playerDiv.style.height = "100%";
+          remotePlayer.appendChild(playerDiv);
+          user.videoTrack.play(playerDiv);
         }
+        if (mediaType === "audio") {
+          user.audioTrack.play();
+        }
+      });
+
+      client.on("user-unpublished", user => {
+        remotePlayer.innerHTML = "Host left the live.";
+        leaveViewer();
+      });
+
+      await updateDoc(sessionDocRef, {
+        viewers: arrayUnion(currentUser.email),
+      });
+
+      console.log("Viewer joined Agora & Firestore");
+    }
+
+    // --- Leave viewer when host ends live ---
+    async function leaveViewer() {
+      try {
+        if (client) await client.leave();
+        client = null;
+        await updateDoc(sessionDocRef, {
+          viewers: arrayRemove(currentUser.email),
+        });
+      } catch (e) {
+        console.warn(e);
+      }
+    }
+
+    // --- Listen for host live updates in Firestore ---
+    function watchLiveSession() {
+      onSnapshot(sessionDocRef, (snap) => {
+        if (!snap.exists()) return;
+        const data = snap.data();
+        hostEmailEl.textContent = data.hostEmail || '—';
+        viewCountEl.textContent = data.viewerCount || 0;
+
+        if (data.active) {
+          liveDot.style.display = 'inline-block';
+          statusEl.textContent = "Live now";
+          joinViewer();
+        } else {
+          liveDot.style.display = 'none';
+          statusEl.textContent = "Offline";
+          remotePlayer.innerHTML = "Waiting for host...";
+          leaveViewer();
+        }
+      });
+    }
+
+    // --- Firebase Auth check ---
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) return window.location.href = "login.html";
+      currentUser = user;
+      console.log("Logged in as", user.email);
+
+      // If Agora SDK is already loaded, start viewer
+      if (typeof AgoraRTC !== "undefined") {
+        initViewer();
+      } else {
+        console.log("Waiting for Agora SDK to load...");
       }
     });
 
-    onAuthStateChanged(auth, (user) => {
-      if (!user) return window.location.href = 'login.html';
+    // --- Cleanup when closing the page ---
+    window.addEventListener("beforeunload", () => {
+      leaveViewer();
     });
-
-    window.addEventListener('beforeunload', cleanupAgora);
   </script>
 </body>
 </html>
